# AtomixJS

./: .gitignore  README.md  custom-compiler.yaml
.github/workflows/: ci.yml
atomix/: .gitignore  CMakeLists.txt  Opcodes.md  README.md  atomix.ld  main.c
atomix/bdwgc/: LICENSE.md  README.md  gc_tiny_fl.h  gc_version.h
atomix/core/: AtomixJS.h  CMakeLists.txt  allocator.h  api.c  api.h  api.impl.h  bundle.c  bundle.h  dict.c  dict.h  dict.impl.h  execution.c  execution.h  execution.impl.h  format.c  format.h  format.impl.h  function.c  function.h  function.impl.h  gc.c  gc.h  gc.impl.h  instruction.c  instruction.h  instruction.impl.h  loader.c  loader.h  loader.impl.h  module.c  module.h  number.c  number.h  number.impl.h  object.c  object.h  object.impl.h  panic.h  scope.c  scope.h  (+9 more)
atomix/debug/: CMakeLists.txt  main.c
atomix/modules/core/: CMakeLists.txt  core.c  mod.json
atomix/prod/: CMakeLists.txt  main.c
atomix/release/: main.c
atomix/src/: allocator.c  allocator.h  api.c  api.h  dict.c  dict.h  execution.c  function.c  function.h  instruction.h  loader.c  loader.h  module.c  module.h  object.c  object.h  panic.h  scope.c  scope.h  value.c  value.h  vm.c  vm.h
atomix/src/mod/: core.c
atomixc/: .gitignore  package-lock.json  package.json  tsconfig.json
atomixc/src/: binary.ts  bundler.ts  dumper.ts  hash.ts  opcodes.ts  parser.ts  pipe.ts  size.ts  transform.ts  writer.ts
atomixc/src/engine/: builder.ts  helper.ts  structure.ts
atomixc/src/format/: bundle.ts  data.ts  file.ts  module.ts  section.ts  stable.ts  string-table.ts
env/: init.ps1  init.sh
test262-runner/: package-lock.json  package.json  suite.js
tests/: .gitignore  suite.js
tests/src/: core.d.ts  jsconfig.json  tsconfig.json
tests/src/algo/: fib.js
tests/src/expressions/additon/: 0.js  1.js  2.js  3.js  4.js  5.js  6.js
tests/src/expressions/assignment/: 0.js  1.js  2.js  3.js  4.js  5.js  6.js
tests/src/expressions/binary_and/: 0.js  1.js  2.js  3.js  4.js  5.js  6.js  7.js
tests/src/expressions/binary_lshft/: 0.js  1.js  10.js  11.js  12.js  13.js  2.js  3.js  4.js  5.js  6.js  7.js  8.js
tests/src/expressions/binary_not/: 0.js  1.js  2.js  3.js  4.js  5.js  6.js  7.js  8.js  9.js
tests/src/expressions/binary_or/: 0.js  1.js  10.js  11.js  12.js  13.js  2.js  3.js  4.js  5.js  6.js  7 copy.js  8.js
tests/src/expressions/binary_rshft/: 0.js  1.js  10.js  11.js  12.js  13.js  2.js  3.js  4.js  5.js  6.js  7.js  8.js
tests/src/expressions/binary_xor/: 0.js  1.js  10.js  11.js  12.js  2.js  3.js  4.js  5.js  6.js  7.js  9.js
tests/src/expressions/binary_zrshft/: 0.js  1.js  10.js  11.js  12.js  13.js  2.js  3.js  4.js  5.js  6.js  7.js  8.js
tests/src/expressions/divsion/: 0.js  1.js  2.js  3.js  4.js  5.js  6.js
tests/src/expressions/greater_equals/: 0.js  1.js  2.js  3.js  4.js  5.js  6.js  7.js  8.js  9.js
tests/src/expressions/greater_than/: 1.js  2.js  3.js  4.js  5.js  6.js  7.js  8.js  9.js
tests/src/expressions/less_equals/: 0.js  1.js  2.js  3.js  4.js  5.js  6.js  7.js  8.js  9.js
tests/src/expressions/less_than/: 0.js  1.js  2.js  3.js  4.js  5.js  6.js  7.js  8.js  9.js
tests/src/expressions/modulo/: 0.js  1.js  2.js  3.js  5.js  6.js
tests/src/expressions/multiplication/: 0.js  1.js  2.js  3.js  4.js  5.js  6.js
tests/src/expressions/negate/: 0.js  2.js  3.js  4.js  5.js  6.js  7.js  8.js  9.js
tests/src/expressions/not/: 0.js  1.js  2.js  (+6 more)
tests/src/primtive/: 1.js  8.js  9.js
tests/src/scope/: 0.js  1.js  2.js  3.js  4.js  5.js
tests/utils/: node-suit.js
(+105 files in other folders)
